++ end-point phase completed for Champion entity